jenkins/ingress/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: cicd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingreses.kubernetes.io/proxy-body-size: "10G"
spec:
  tls:
  - hosts:
    - jenkins.mydomain.com
    secretName: tls-secret
  rules:
  - host: jenkins.mydomain.com
    http:
      paths:
        - backend:
            serviceName: jenkins-service
            servicePort: 80
